# ai-detector

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  config.toml  nginx-init.conf  nginx.conf  pyproject.toml
scripts/: deploy.sh
src/: configuration.py  data_models.py  main.py  utils.py
src/api/: __init__.py  data_models.py  rate_limiter.py  router.py  utils.py
src/detection/: __init__.py  compression_based.py  detector.py  heuristics.py  llm_based.py  spelling.py  stylometry.py
src/ml/: __init__.py  stylometric_classifier.py
src/nlp/: __init__.py  sentence_splitter.py  spell_checker.py  tokeniser.py
src/training/: __init__.py  dataset.py  evaluation.py  prompt_manager.py  sample_generator.py  sanitiser.py  tuning.py
